--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [plex]
-webhook_url = /webhooks/my_webhook
+webhook_url = http://192.168.1.35:8000/plexupdater
 
 [email]
-user = alexandre_kun@hotmail.com
-password = "cfjb wovn jqxk zndi "
-host = smtp.gmail.com
-recipients = pesquet.alexandre@orange.fr,claurent22300@gmail.com
+user = plexnews@orange.fr
+password = ubqix-ruptm-vcaol-vwctf
+host = smtp.orange.fr
+recipients = pesquet.alexandre@orange.fr,claurent22300@gmail.com,eden.rachet@gmail.com
