--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [plex]
-webhook_url = http://192.168.1.35:8000/plexupdater
+webhook_url = http://localhost:8000/plexupdater
 
 [email]
-user = plexnews@orange.fr
-password = ubqix-ruptm-vcaol-vwctf
-host = smtp.orange.fr
-recipients = pesquet.alexandre@orange.fr,claurent22300@gmail.com,eden.rachet@gmail.com
+user = youruser
+password = yourpassword
+host = yoursmtphost
+recipients = user1,user2
